htdocs/luci-static/argon/cascade.css
/* ... */
@keyframes sk-foldCubeAngle {
  0%,
  10% {
    -webkit-transform: perspective(140px) rotateX(-180deg);
    transform: perspective(140px) rotateX(-180deg);
    opacity: 0;
  }
  25%,
  75% {
    -webkit-transform: perspective(140px) rotateX(0deg);
    transform: perspective(140px) rotateX(0deg);
    opacity: 1;
  }
  90%,
  100% {
    -webkit-transform: perspective(140px) rotateY(180deg);
    transform: perspective(140px) rotateY(180deg);
    opacity: 0;
  }
}
.table {
  position: relative;
  display: table;
}
.tr {
  display: table-row;
}
.thead {
  display: table-header-group;
}
.tbody {
  display: table-row-group;
}
.tfoot {
  display: table-footer-group;
}
.td,
.th {
  line-height: normal;
  display: table-cell;
  padding: 0.5em;
  text-align: center;
  vertical-align: middle;
}
.th {
  font-weight: bold;
}
.tr.placeholder {
  height: 4em;
}
.tr.placeholder > .td {
  line-height: 3;
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 0.4rem 0 !important;
  text-align: center !important;
  background: inherit;
}
.td[width="33%"] {
  padding: 1.1em 1.5rem;
}
.table[width="33%"],
.th[width="33%"],
.td[width="33%"] {
  width: 33%;
}
.table[width="100%"],
.th[width="100%"],
.td[width="100%"] {
  width: 100%;
}
.col-1 {
  flex: 1 1 30px !important;
}
.col-2 {
  flex: 2 2 60px !important;
}
.col-3 {
  flex: 3 3 90px !important;
}
.col-4 {
  flex: 4 4 120px !important;
}
.col-5 {
  flex: 5 5 150px !important;
}
.col-6 {
  flex: 6 6 180px !important;
}
.col-7 {
  flex: 7 7 210px !important;
}
.col-8 {
  flex: 8 8 240px !important;
}
.col-9 {
  flex: 9 9 270px !important;
}
.col-10 {
  flex: 10 10 300px !important;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  color: #32325d;
  color: var(--gray-dark);
}
.h1,
.h2,
.h3,
.h4,
.h5,
.h6,
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: inherit;
  font-weight: normal;
  line-height: 1.1 !important;
  color: inherit;
}
html {
  overflow-y: hidden;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}
body {
  font-size: 0.9rem;
  background-color: #f8f9fe;
}
html,
body {
  font-family: "Microsoft Yahei", "WenQuanYi Micro Hei", "sans-serif", "Helvetica Neue", "Helvetica", "Hiragino Sans GB";
  font-family: var(--font-body);
  height: 100%;
  margin: 0;
  padding: 0;
}
select {
  padding: 0.36rem 0.8rem;
  color: #555;
  border: thin solid #ccc;
  background-color: #fff;
  background-image: none;
}
.btn,
button,
select,
input,
.cbi-dropdown {
  line-height: 1.5rem;
  height: 2.5rem;
  padding: 0.625rem 0.75rem;
  margin: 0.25rem 0.1rem;
  color: #8898aa;
  border: 1px solid #dee2e6;
  border-radius: 0.25rem;
  outline: 0;
  background-image: none;
  box-shadow: none;
  transition: box-shadow 0.15s ease;
}
select,
.cbi-dropdown {
  width: inherit;
  cursor: default;
}
select:not([multiple="multiple"]):focus,
input:not(.cbi-button):focus,
.cbi-dropdown:focus {
  border-color: #5e72e4;
  border-color: var(--primary);
  box-shadow: 0 3px 9px rgba(50, 50, 9, 0), 3px 4px 8px rgba(94, 114, 228, 0.1);
}
.cbi-dropdown,
select[multiple="multiple"] {
  height: auto;
}
pre {
  overflow: auto;
}
code {
  font-size: 1rem;
  font-size-adjust: 0.35;
  padding: 1px 3px;
  color: #101010;
  border-radius: 2px;
  background: #ddd;
}
abbr {
  cursor: help;
  text-decoration: underline;
  color: #fff;
}
hr {
  margin: 1rem 0;
  opacity: 0.1;
  border-color: #eee;
}
header,
.main {
  width: 100%;
}
footer {
  font-size: 0.8rem;
  overflow: hidden;
  padding: 1rem;
  text-align: right;
  white-space: nowrap;
  color: #aaa;
  text-shadow: 0 0 2px #bbb;
}
footer > a {
  text-decoration: none;
  color: #aaa;
}
small {
  font-size: 90%;
  line-height: 1.42857143;
  white-space: normal;
}
.main {
  position: relative;
  top: 0;
  bottom: 0;
  overflow-y: auto;
  height: 100%;
}
.main > .loading {
  position: fixed;
  z-index: 1000;
  top: 0;
  display: block;
  width: 100%;
  height: 100%;
  pointer-events: none;
  background-color: #f0f0f0;
}
.main > .loading > span {
  font-family: monospace;
  font-size: 2rem;
  font-size-adjust: 0.35;
  position: relative;
  top: 12.5%;
  display: block;
  text-align: center;
  color: #888;
}
.main > .loading > span > .loading-img {
  position: relative;
  top: 0.1rem;
  left: 0.05rem;
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
  margin-right: 1rem;
  animation: anim-rotate 2s infinite linear;
  background: url(icons/spinner.svg) no-repeat center;
}
@keyframes anim-rotate {
  0% {
    -webkit-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }
  100% {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
.main-left {
  top: 0;
  float: left;
  width: 15%;
  width: calc(0% + 15rem);
  height: 100%;
  background-color: #fff;
  background-color: var(--menu-bg-color);
  box-shadow: 0 0 2rem 0 rgba(136, 152, 170, 0.15);
  overflow-x: auto;
  position: fixed;
  z-index: 100;
}
.main-left .sidenav-header {
  padding: 1.5rem;
  text-align: center;
}
.main-left .sidenav-header .brand {
  font-size: 1.8rem;
  color: #5e72e4;
  font-family: "TypoGraphica";
  text-decoration: none;
  text-align: center;
  cursor: default;
  vertical-align: text-bottom;
  white-space: nowrap;
}
.main-right {
  float: right;
  width: 85%;
  width: calc(100% - 15rem);
  height: 100%;
  background-color: #f8f9fe;
  transition: all 0.2s;
}
.main-right > #maincontent {
  position: relative;
  z-index: 50;
  margin-top: -13rem;
}
.pull-right {
  float: right;
}
.pull-left {
  float: left;
}
.nowrap:not(.td) {
  white-space: nowrap;
}
[disabled="disabled"] {
  pointer-events: none;
}
header {
  color: #fff;
  color: var(--header-color);
  padding: 0 0 14rem 0;
}
header.bg-primary {
  background-color: #5e72e4 !important;
  background-color: var(--primary) !important;
}
header .fill {
  padding: 0.8rem 0;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08) !important;
}
header .fill .container {
  height: 2rem;
  padding: 0 1rem;
}
/* ... */

